--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ build/
 !**/src/test/**/build/
 
 **/*.mv.db
+**/*.trace.db
 
 **/*.swp
 
@@ -40,4 +41,3 @@ out/
 
 ### VS Code ###
 .vscode/
-quizzzz.trace.db
